--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,8 +12,7 @@
   <a href="{{ path('app_partenaire') }}"><button  class="btn btn-info"  type="submit" >partenaire</button></a>
   <a href="{{ path('app_province') }}"><button  class="btn btn-info"  type="submit" >province</button></a>
   <a href="{{ path('app_secteur') }}"><button  class="btn btn-info"  type="submit" >secteur</button></a>
-
-
+ <a href="{{ path('app_logout') }}"><button  class="btn btn-danger"  type="submit" >log Out</button></a>
 
 </div>
 </div>
