--- a/public/styles/decore.css
+++ b/public/styles/decore.css
@@ -109,3 +109,34 @@ color: #ECEFF1;
             width: 100px
            }
            /****************************************************/
+           .logina{
+         width: 80vw;
+      position: absolute;
+        top:65%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+          
+           }
+           .man{
+            color:white;
+           position:absolute;
+           left:50%;
+           transform:translate(-50%,0%);
+           height:200px;
+  
+            }
+          .man img{
+            width:100px;
+            height:100px;
+            margin:auto;
+            display:block;
+
+
+          }
+         
+           .man p{
+            margin: 0;
+            font-size: 12px;
+            text-align: center;
+
+           }
