--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,22 @@
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body>  
+     <div  class="man" >
+    <img 
+    src="{{ asset('build/images/bird.png') }}" alt="ACME logo">
+    <p>ROYAUME DU MAROC</p>
+    <p>MINISTERE DE L'INTERIEUR</p>
+    <p>WILAYA DE LA REGION BENI MELLAL KHENIFRA</p> 
+    <p>CONSEIL REGIONAL DE BENI MELLAL KHENIFRA</p>
+    <p>AGENCE REGIONALE D'EXECUTION DES PROJETS</p>
+    <p>REGION BENI MELLAL KHENIFRA</p>
+     </div>
+        {% block body %}
+     
+        
+        
+        
+        {% endblock %}
     </body>
 </html>
