--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,6 +13,10 @@
   <a href="{{ path('app_province') }}"><button  class="btn btn-info"  type="submit" >province</button></a>
   <a href="{{ path('app_secteur') }}"><button  class="btn btn-info"  type="submit" >secteur</button></a>
  <a href="{{ path('app_logout') }}"><button  class="btn btn-danger"  type="submit" >log Out</button></a>
+{% if is_granted('ROLE_ADMIN')  %} 
+  <a href="{{ path('app_register') }} "><button  class="btn btn-danger"  type="submit" >register</button></a>
+
+{% endif %}
 
 </div>
 </div>
